Change history

RC1 
===

Core:

- ITrace and Trace property added to IRailsEngineContext (kudos to Chad Humphries)
- Hierarchy of areas support (kudos to Fabio Batista)
- PaginationHelper introduced

Scaffolding support:

- huge refactoring
- It's now using templates

Test support:

- Introduced Castle.MonoRail.TestSupport

Bug fixes:

- Incorrect url were accepted (fixed by Fabio Batista)


Beta 4
======

- Added useWindsorIntegration attribute to monoRail configuration section

Beta 3
======

- Databind
- Initial Scaffolding support
- Routing feature
- Localization support
- More helpers and improvements


Beta 2
====== 

- Few bug corrections
- Applied patch from Dru Sellers: NVelocityViewEngine adds a $siteRoot exposing the Request.ApplicationPath
