@@ -139,6 +139,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "ServerUtilityTestCase.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "SmartDispatcherTestCase.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
